--- a/src/app/shared/components/routers/main-page/main-page.component.html
+++ b/src/app/shared/components/routers/main-page/main-page.component.html
@@ -2,7 +2,7 @@
 <body class="page__body">
     <section class="main-section">
         <div class="main-section__carousel carousel">
-            <app-carousel [images]="images"></app-carousel>
+            <app-carousel class="main-carousel" [images]="images"></app-carousel>
         </div>
         <p class="main-section__about about">
             ВСЕМ ГУЧЧИ!!
