--- a/src/app/shared/components/carousel/carousel.component.css
+++ b/src/app/shared/components/carousel/carousel.component.css
@@ -1,10 +1,8 @@
 .carousel-container{
     position: relative;
-    margin: auto;
     text-align: center;
-    box-shadow: 0 -5px 20px #0ABAB5; 
-    width: 68.4rem;
-    height: 50.7rem;
+    width: 100%;
+    height: 100%;
 }
 
 .carousel-container img {
@@ -13,9 +11,9 @@
   
 .carousel-container img.image-active {
     display: block;
+    object-fit: cover;
     width: 100%;
     height: 100%;
-    object-fit: cover;
 }
 
 .carousel-dot-container{
